--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     background-color: #fff;
@@ -40,40 +40,40 @@ body {
     max-width: 800px;
     margin: auto;
     text-align: left;
-    margin-right: 20px; /* Ajusta el margen derecho */
+    margin-right: 20px; 
 }
 
 .pricing {
     text-align: center;
-    margin: 20px 0;
+    margin: 20px 40;
 }
 
 .sidebar {
     background-color: #20c090;
     padding: 10px;
     color: white;
-    max-width: 250px;
-    /* margin: 20px auto; */
+    max-width: 300px;
+    
 }
 
 .sidebar div {
     background-color: white;
     color: #0a3d2e;
-    padding: 10px;
-    /* margin: 5px 0; */
+    padding: 50px;
+
 }
 
 .seccion2 {
-    /*Poner  a la izquierda*/
+    
     float: left;
-    margin-right: 20px; /* Ajusta el margen derecho */
+    margin-right: 20px; 
 }
 
 .sidebar1 {
-    /*Poner a la derecha*/
+   
     float: right;
     text-align: left;
-    margin-right: 20px; /* Ajusta el margen derecho */
+    margin-right: 40px; 
 }
 
 .ebooks {
@@ -84,9 +84,9 @@ body {
 .ebooks .row {
     display: flex;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    justify-content: flex-start; /* Alinea las filas más a la derecha */
+    gap: 40px;
+    margin-bottom: 40px;
+    justify-content: flex-start; 
 }
 
 .ebook-item {
@@ -120,12 +120,12 @@ body {
         display: flex;
         justify-content: center;
         flex-wrap: nowrap;
-        gap: 12px;
+        gap: 15px;
         overflow-x: auto;
     }
 
     .pricing img {
-        max-width: 30%;
+        max-width: 40%;
         height: auto;
     }
 
