--- a/style.css
+++ b/style.css
@@ -47,6 +47,13 @@ body {
     text-align: center;
     margin: 20px 40;
 }
+.h1 {
+    font-size: medium; /* Tamaño grande */
+    font-weight: bold; /* Negrita */
+    text-align: center; /* Centrado */
+    margin: 20px 0; /* Espaciado superior e inferior */
+    color: #ff0000; /* Color del texto */
+}
 
 .sidebar {
     background-color: #20c090;
